<resources>
    <string name="app_name">FinancialBuddy</string>
    <string name="menu_home">Home</string>
    <string name="menu_investment_plans">Investment Plans</string>
    <string name="menu_more">More</string>
    <string name="expected_return_rate_p_a">Expected return rate (p.a)</string>
    <string name="time_period">Time period</string>
    <string name="monthly_investment">Monthly investment</string>
    <string name="calculate">Calculate</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="calculator">Personal Finance Helper \n<![CDATA[& Calculator]]></string>
    <string name="financialbuddy">FinancialBuddy</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="all_financial_calculators">All Financial Calculators</string>
    <string name="see_all_calculators">See All Calculators</string>
    <string name="compounding_period">Compounding Period</string>
    <string name="invested_amount">Invested Amount</string>
    <string name="est_returns">Est. returns</string>
    <string name="total_value">Total value</string>
    <string name="monthly_emi">Monthly EMI</string>
    <string name="calculate_hra_tax_exemption">Calculate HRA tax exemption</string>
    <string name="basic_salary_yearly">Basic Salary (Yearly)</string>
    <string name="hra_received">HRA received</string>
    <string name="total_rent_paid_yearly">Total rent paid (Yearly)</string>
    <string name="dearness_allowance_optional">Dearness allowance (optional)</string>
    <string name="my_house_is_in_a">My house is in a</string>
    <string name="_0">0</string>
    <string name="hra_taxable">HRA taxable</string>
    <string name="hra_exempted">HRA exempted</string>
    <string name="my_rent_receipts">My Rent Receipts</string>
    <string name="generate_new_receipt">Generate New Receipt</string>
    <string name="to_generate_new_rent_receipt_please_fill_below_information">To Generate New Rent Receipt Please Fill Below Information</string>
    <string name="my_full_name_is">My full name is</string>
    <string name="my_monthly_rent_is">My monthly rent is</string>
    <string name="my_pan_optional">My PAN (Optional)</string>
    <string name="house_owner_s_name_is">House owner\'s name is</string>
    <string name="house_owner_s_pan_optional">House owner\'s PAN (Optional)</string>
    <string name="address_of_rented_house_is">Address of rented house is</string>
    <string name="rent_receipt_start_date_is">Rent receipt start date is</string>
    <string name="rent_receipt_end_date_is">Rent receipt end date is</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="generate_receipt">Generate Receipt</string>
    <string name="investment_planning_is_an_important_part_of_financial_planning_where_an_individual_puts_to_use_their_savings_and_earns_more_through_disciplined_investment">Investment planning is an important part of financial planning where an individual puts to use their savings and earns more through disciplined investment. Top Investment Ideas are mentioned below.</string>
    <string name="app_theme">App Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="rate_financialbuddy">Rate FinancialBuddy</string>
    <string name="share_financialbuddy">Share FinancialBuddy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="more_apps">More Apps</string>
    <string name="cammaster">CamMaster</string>
    <string name="tools">Tools</string>
    <string name="generate_rent_receipt">Generate Rent\nReceipt</string>
    <string name="calculate_hra">Calculate HRA</string>
</resources>