<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <ImageView
                android:id="@+id/iv_home_app_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/app_logo_circle"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/financialbuddy"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_home_app_logo"
                app:layout_constraintStart_toEndOf="@+id/iv_home_app_logo"
                app:layout_constraintTop_toTopOf="@+id/iv_home_app_logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/bottomNavBackgroundColor"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_home_app_logo">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_calculator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingBottom="10dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:spanCount="3"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_calculator" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_heading_tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/tools"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_container" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_generate_rent_receipt"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/bottomNavBackgroundColor"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_heading_tools">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lav_rent"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/rent_receipt_animation" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="@string/generate_rent_receipt"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/lav_rent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_hra_calculation"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="100dp"
                app:cardBackgroundColor="@color/bottomNavBackgroundColor"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/btn_generate_rent_receipt">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lav_hra"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/hra_animation" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="@string/calculate_hra"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/lav_hra"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>