<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="30dp" />

            <TextView
                android:id="@+id/tv_heading"
                style="@style/HeadingStyle"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/gl_end"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Sip Calculator" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/monthly_investment"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_heading"
                app:startIconDrawable="@drawable/ic_currency_rupee">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_return_rate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/expected_return_rate_p_a"
                app:endIconDrawable="@drawable/ic_percent"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/et_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time_period"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/et_return_rate" />

            <TextView
                android:id="@+id/tv_time_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@+id/gl_end"
                app:layout_constraintTop_toBottomOf="@+id/et_return_rate"
                tools:text="12%" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:value="5"
                android:valueFrom="1"
                android:valueTo="30"
                app:labelBehavior="gone"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_compound_period"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="Compounding Period"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/slider_duration">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_calculate"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toStartOf="@+id/gl_end"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/et_compound_period" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/btn_calculate">

                <TextView
                    android:id="@+id/heading_investment_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Invested Amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/heading_est_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Est. returns"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/heading_investment_amount" />

                <TextView
                    android:id="@+id/heading_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Total value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/heading_est_return" />

                <TextView
                    android:id="@+id/tv_invested_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1000" />

                <TextView
                    android:id="@+id/tv_est_returns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_invested_amount"
                    tools:text="1000" />

                <TextView
                    android:id="@+id/tv_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_est_returns"
                    tools:text="1000" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="0dp"
                    android:layout_height="500dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_total_value" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>